[package]
name = "docdustry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
env_logger = "0.11.3"
ignore = "0.4.22"
log = "0.4.21"
md5 = "0.7.0"
pulldown-cmark = "0.10.0"
pulldown-cmark-escape = "0.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
